src/services/Logary.Services.Rutta/k8s/with-istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rutta

spec:
  hosts:
  - api.logary.test

  gateways:
  - istio-gateways/ingress # your singleton gateway in the istio system
  - mesh # if this is accessible via the istio mesh

  http:
  - name: rutta
    route:
    - destination:
        host: rutta.logary.svc.cluster.local
        port:
          number: 80
